<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ChartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".View.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="@color/light_gray"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/left_arrow"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:src="@drawable/ic_left_arrow"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text_label"
                android:layout_weight="3"
                android:gravity="center"
                android:background="@color/light_gray"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/right_arrow"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:src="@drawable/ic_right_arrow"
                android:contentDescription="@string/next" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_dark"
            android:columnCount="2"
            android:rowCount="2"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:text="@string/total_calories"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_calories" />
            <TextView
                android:text="@string/total_push_ups"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_fitness" />
            <TextView
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:id="@+id/calories"
                android:gravity="center|top" />
            <TextView
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="2"
                android:id="@+id/total_done"
                android:layout_columnWeight="1"
                android:gravity="center|top" />

        </GridLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="0dp"
            android:layout_weight="4"
            />

    </LinearLayout>

</FrameLayout>