<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dark"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="17sp"
            android:id="@+id/max_record"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/light_gray"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/label01"
                android:text="@string/training"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/progress_num"
                android:textSize="15sp"
                android:layout_alignEnd="@+id/label01"
                android:layout_alignParentEnd="true"
                />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_start"
                    android:layout_weight="1"/>
                <ProgressBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:id="@+id/progress_bar"
                    style="?android:progressBarStyleHorizontal">
                </ProgressBar>
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/ic_end"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:columnCount="2"
                android:rowCount="2"
                android:orientation="horizontal"
                android:layout_weight="2">

                <TextView
                    android:text="@string/push_up_made"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    app:drawableStartCompat="@drawable/ic_target_done" />
                <TextView
                    android:text="@string/push_ups_remains"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    app:drawableStartCompat="@drawable/ic_target_flag" />
                <TextView
                    android:id="@+id/push_done"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/push_remains"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:gravity="center" />

            </GridLayout>

        </LinearLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="2"
            android:background="@color/black"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:text="@string/next_session"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/next_session"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:textSize="16sp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/white"
                />
            <TextView
                android:text="@string/total"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center_vertical" />
            <TextView
                android:id="@+id/total_sets"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center" />

        </GridLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/start_btn"
            android:theme="@style/Theme.Start"
            android:layout_margin="5dp"
            android:text="@string/start_training"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>